<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainActivity.BaseLayout"
    >
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/ok_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok_button"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/default_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_button"
            android:layout_weight="1"
            />
    </LinearLayout>
    <TextView
        android:text="@string/bg_seekbar_title"
        style="@style/MainActivity.HeaderTitle"
        />
    <LinearLayout
        android:id="@+id/bg_setting_layout_1"
        style="@style/MainActivity.BgSettingLayout"
        >
        <RadioGroup
            android:id="@+id/bg_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <RadioButton android:id="@+id/bg_type_transparency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_bg_type_transparency"
                />
            <RadioButton android:id="@+id/bg_type_translucent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_bg_type_translucent"
                />
            <RadioButton android:id="@+id/bg_type_opacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_bg_type_opacity"
                />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bg_setting_layout_2"
        android:orientation="vertical"
        style="@style/MainActivity.BgSettingLayout"
        >
        <LinearLayout
            style="@style/MainActivity.SeekBarRowLayout"
            >
            <TextView
                android:id="@+id/bg_seekbar_title_a"
                android:text="@string/alpha"
                style="@style/MainActivity.SeekBarText"
                />
            <SeekBar
                android:id="@+id/bg_seekbar_a"
                style="@style/MainActivity.SeekBar"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/MainActivity.SeekBarRowLayout"
            >
            <TextView
                android:id="@+id/bg_seekbar_title_r"
                android:text="@string/red"
                style="@style/MainActivity.SeekBarText"
                />
            <SeekBar
                android:id="@+id/bg_seekbar_r"
                style="@style/MainActivity.SeekBar"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/MainActivity.SeekBarRowLayout"
            >
            <TextView
                android:id="@+id/bg_seekbar_title_g"
                android:text="@string/green"
                style="@style/MainActivity.SeekBarText"
                />
            <SeekBar
                android:id="@+id/bg_seekbar_g"
                style="@style/MainActivity.SeekBar"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/MainActivity.SeekBarRowLayout"
            >
            <TextView
                android:id="@+id/bg_seekbar_title_b"
                android:text="@string/blue"
                style="@style/MainActivity.SeekBarText"
                />
            <SeekBar
                android:id="@+id/bg_seekbar_b"
                style="@style/MainActivity.SeekBar"
                />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/not_zero_text_seekbar_title"
        android:text="@string/not_zero_text_seekbar_title"
        style="@style/MainActivity.HeaderTitle"
        />
    <LinearLayout
        style="@style/MainActivity.SeekBarRowLayout"
        >
        <TextView
            android:id="@+id/not_zero_text_seekbar_title_a"
            android:text="@string/alpha"
            style="@style/MainActivity.SeekBarText"
            />
        <SeekBar
            android:id="@+id/not_zero_text_seekbar_a"
            style="@style/MainActivity.SeekBar"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/MainActivity.SeekBarRowLayout"
        >
        <TextView
            android:id="@+id/not_zero_text_seekbar_title_r"
            android:text="@string/red"
            style="@style/MainActivity.SeekBarText"
            />
        <SeekBar
            android:id="@+id/not_zero_text_seekbar_r"
            style="@style/MainActivity.SeekBar"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/MainActivity.SeekBarRowLayout"
        >
        <TextView
            android:id="@+id/not_zero_text_seekbar_title_g"
            android:text="@string/green"
            style="@style/MainActivity.SeekBarText"
            />
        <SeekBar
            android:id="@+id/not_zero_text_seekbar_g"
            style="@style/MainActivity.SeekBar"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/MainActivity.SeekBarRowLayout"
        >
        <TextView
            android:id="@+id/not_zero_text_seekbar_title_b"
            android:text="@string/blue"
            style="@style/MainActivity.SeekBarText"
            />
        <SeekBar
            android:id="@+id/not_zero_text_seekbar_b"
            style="@style/MainActivity.SeekBar"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/zero_text_seekbar_title"
        android:text="@string/zero_text_seekbar_title"
        style="@style/MainActivity.HeaderTitle"
        />
    <LinearLayout
        style="@style/MainActivity.SeekBarRowLayout"
        >
        <TextView
            android:id="@+id/zero_text_seekbar_title_a"
            android:text="@string/alpha"
            style="@style/MainActivity.SeekBarText"
            />
        <SeekBar
            android:id="@+id/zero_text_seekbar_a"
            style="@style/MainActivity.SeekBar"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/MainActivity.SeekBarRowLayout"
        >
        <TextView
            android:id="@+id/zero_text_seekbar_title_r"
            android:text="@string/red"
            style="@style/MainActivity.SeekBarText"
            />
        <SeekBar
            android:id="@+id/zero_text_seekbar_r"
            style="@style/MainActivity.SeekBar"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/MainActivity.SeekBarRowLayout"
        >
        <TextView
            android:id="@+id/zero_text_seekbar_title_g"
            android:text="@string/green"
            style="@style/MainActivity.SeekBarText"
            />
        <SeekBar
            android:id="@+id/zero_text_seekbar_g"
            style="@style/MainActivity.SeekBar"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/MainActivity.SeekBarRowLayout"
        >
        <TextView
            android:id="@+id/zero_text_seekbar_title_b"
            android:text="@string/blue"
            style="@style/MainActivity.SeekBarText"
            />
        <SeekBar
            android:id="@+id/zero_text_seekbar_b"
            style="@style/MainActivity.SeekBar"
            />
    </LinearLayout>
</LinearLayout>
